# streamdeck-claude-bridge

./: .gitignore  README.md  SETUP.md  pyproject.toml
.claude/: settings.json
.claude/hooks/: on-question.sh  on-resolved.sh
.codex/hooks/: on-permission-request.sh  on-resolved.sh
bridge/: __init__.py  __main__.py  auth.py  gradle_runner.py  hooks_api.py  injector.py  models.py  npm_runner.py  server.py  state.py  ws.py
intellij-plugin/: build.gradle.kts  settings.gradle.kts
scripts/: dump-hook.sh  inject-keys.py  install-launchd.sh  list-sessions.py  read-screen.py
streamdeck-plugin/: package-lock.json  package.json  rollup.config.mjs  tsconfig.json
streamdeck-plugin/com.shinsanghoon.claude-bridge.sdPlugin/: Claude Bridge.streamDeckProfile  Codex Bridge.streamDeckProfile  Dev Launcher.streamDeckProfile  manifest.json
streamdeck-plugin/scripts/: build-once.mjs  make-dev-launcher-profile.py  make-icons.py
streamdeck-plugin/src/: answer-action.ts  answer-image.ts  bridge-client.ts  cancel-action.ts  codex-logo-action.ts  gradle-bridge-client.ts  intellij-client.ts  launcher-action-core.ts  launcher-action.ts  launcher-auth.ts  launcher-config-store.ts  launcher-config.ts  launcher-editor.ts  launcher-error.ts  launcher-image.ts  launcher-paths.ts  launcher-refresh-policy.ts  launcher-state.ts  launcher-types.ts  (+9 more)
tests/: test_gradle_api.py  test_gradle_runner.py  test_hooks_api.py  test_injector_select.py  test_key_sequence.py  test_models.py  test_npm_runner.py  test_server_app.py  test_smoke.py  test_state.py  test_ws.py
webclient/: app.js  index.html
(+46 files in other folders)
