[project]
name = "streamdeck-claude-bridge"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = ["aiohttp>=3.9", "iterm2>=2.0"]

[project.optional-dependencies]
dev = ["pytest>=8", "pytest-asyncio>=0.23", "pytest-aiohttp>=1.0"]

[tool.setuptools]
packages = ["bridge"]

[tool.pytest.ini_options]
asyncio_mode = "auto"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"
